<resources>
    <string name="app_name">LineGeodesy</string>
    <string name="action_intersection">Egyenesek metszéspontja</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Szakasz részekre osztása</string>
    <string name="second_fragment_label">Számított eredmények</string>
    <string name="count">Számol</string>
    <string name="action_exit">Kilépés</string>
    <string name="previous">Vissza</string>
    <string name="y_coordinate_text">Y=</string>
    <string name="x_coordinate_text">X=</string>
    <string name="z_coordinate_text">M=</string>
    <string name="start_point_text">Kezdőpont/Álláspont:</string>
    <string name="end_point_text">Végpont:</string>
    <string name="metric">m</string>
    <string name="pcs">db</string>
    <string name="number_of_divider_points_text">Az osztópontok száma:</string>
    <string name="length_of_section">A szakasz hossza:</string>
    <string name="distance_between_points_text">A pontok közti távolság:</string>
    <string name="start_y_coord_field_is_empty_msg">A kezdőpont Y koordinátájának megadása szükséges.</string>
    <string name="start_x_coord_field_is_empty_msg">A kezdőpont X koordinátájának megadása szükséges.</string>
    <string name="end_y_coord_field_is_empty_msg">A végpont Y koordinátájának megadása szükséges.</string>
    <string name="end_x_coord_field_is_empty_msg">A végpont X koordinátájának megadása szükséges.</string>
    <string name="divider_points_coordinates">Az osztópontok koordinátái:</string>
    <string name="divider_point_coordinate">Az osztópont koordinátája:</string>
    <string name="outsider_point_text">Külső pont koordinátája:</string>
    <string name="intersection_point_text">A metszéspont koordinátái:</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="close_app_title">Alkalmazás bezárása</string>
    <string name="close_app_question">Biztos, hogy ki akarsz lépni az alkalmazásból?</string>
    <string name="error_intersection">Metszéspont nem számítható!</string>
    <string name="exchange_data">Koordináták cseréje</string>
</resources>